# rust-btrfs

./: Cargo.toml
src/: lib.rs
src/compress/: lzo.rs
src/diskformat/: misc.rs  superblock.rs
src/diskformat/item/: chunk_item.rs  dev_item.rs  dir_index.rs  dir_item.rs  extent_data.rs  extent_item.rs  inode_item.rs  internal_item.rs  invalid_item.rs  leaf_item.rs  unknown_item.rs
src/diskformat/node/: header.rs  internal_node.rs  leaf_node.rs  node.rs
src/diskformat/tree/: chunk_tree.rs  root_tree.rs  tree.rs
src/linux/: imports.rs  ioctl_wrapper.rs
src/linux/ctypes/: ioctl_dev_info_args.rs  ioctl_device_path.rs  ioctl_file_dedupe_range.rs  ioctl_fs_info_args.rs
src/linux/operations/: deduplicate.rs  defragment.rs  fiemap.rs  filesystem_info.rs  space_info.rs
src/linux/types/: compression_type.rs  dedupe_range.rs  dedupe_range_dest_info.rs  device_info.rs  file_descriptor.rs  filesystem_info.rs  group_profile.rs  group_type.rs  space_info.rs
