[package]

	name = "btrfs"
	description = "Interface for BTRFS ioctls etc"
	license = "MIT"

	version = "1.2.3"

	authors = [
		"James Pharaoh <james@wellbehavedsoftware.com>",
	]

	include = [
		"src/**/*.rs",
		"Cargo.toml",
		"README.md",
	]
	edition = "2018"


[dependencies]
	anyhow = "1.0.61"
	crc = "3.0.0"
	flate2 = "1.0.24"
	lazy_static = "1.4.0"
	libc = "0.2"
	minilzo = "0.2"
	nix = "0.25"
	uuid = "1.1.2"

# noet ts=4 filetype=toml
